--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/danilomacb/api-whitout-mongoose#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "mongodb": "^3.5.6"
   }
 }
